<resources>
    <string name="app_name">Android survival coding</string>
    <string name="bmi">BMI</string>
    <string name="height">키</string>
    <string name="weight">몸무게</string>
    <string name="result">결과</string>
    <string name="resultText">결과가 표시되는곳</string>
    <string name="stopWatch">스탑워치</string>
    <string name="WebView">나만의 웹 브라우저</string>
    <string name="BMI">비만도 계산기</string>
    <string name="count">0</string>
    <string name="milli">00</string>
    <string name="lapTime">랩 타임</string>
    <string name="http">http://</string>
    <string name="searchSite">검색 사이트</string>
    <string name="search">검색 사이트</string>
    <string name="naver">네이버</string>
    <string name="google">구글</string>
    <string name="daum">다음</string>
    <string name="developer">개발자 정보</string>
    <string name="call">연락처</string>
    <string name="text">문자 보내기</string>
    <string name="email">이메일 보내기</string>
    <string name="home">Home</string>
    <string name="share">페이지 공유</string>
    <string name="browser_text">기본 브라우저 열기</string>
    <string name="tiltSensor">수평 측정기</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_todo">TodoActivity</string>
    <string name="todo">할 일</string>
</resources>
